CSS added for ux regarding the filling out of forms which include Register, RegisterClient, EditClient, and EditPersonalTrainer. (For success display message - no longer shifts fields).

--- a/app/client/src/App.css
+++ b/app/client/src/App.css
@@ -619,7 +619,11 @@ input[type=submit] {
 
 /* Register-client */
 
-.register-client, .edit-client, .edit-pt {
+.register-client, .register-pt, .edit-client, .edit-pt {
     height: 62px;
+}
+
+.text-success {
+    height: 25px;
 }
 
